fix: change relation between address and address item